@@ -1,2 +1,2 @@
 #
-__version__ = '2.5.1'
+__version__ = '2.5.2.dev1'
